app/css/layout.css
body {
    position: relative;
    padding-top: 50px;
}

body.modal-open .navbar-fixed-top {
     /* give right padding equivalent to gutter to compensate for modal shifting navbar */
    padding-right: 15px;
}

/*#top {
    position: absolute;
    top: -50px;
}*/

.citm-component {
    position: relative;
}

.citm-component .modal {
    position: relative;
    top: auto;
    right: auto;
    left: auto;
    bottom: auto;
    z-index: 1;
    display: block;
}

.citm-component .popover {
    position: relative;
    display: inline-block;
    width: 220px;
    margin: 20px;
}

#source-button {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 100;
    font-weight: 700;
    box-shadow: 0 3px 9px rgba(0,0,0,.25);
}

#source-modal pre {
    font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
    font-weight: normal;
}

.nav-tabs {
    margin-bottom: 15px;
}

.progress {
    margin-bottom: 10px;
}

.bs-glyphicons {
    overflow: hidden;
}

.bs-glyphicons-list {
    list-style: none;
}

.bs-glyphicons li {
    float: left;
    width: 25%;
    height: 115px;
    padding: 10px;
    font-size: 10px;
    line-height: 1.4;
    text-align: center;
    background-color: #f9f9f9;
    border: 1px solid #fff;
}

.bs-glyphicons .glyphicon {
    margin-top: 5px;
    margin-bottom: 10px;
    font-size: 24px;
}

.glyphicon {
    position: relative;
    top: 1px;
    display: inline-block;
    font-family: 'Glyphicons Halflings';
    font-style: normal;
    font-weight: 400;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.bs-glyphicons .glyphicon-class {
    display: block;
    text-align: center;
    word-wrap: break-word;
    font-size: 1.65em;
}

.hide-component {
    display: none;
}


/** UTK Top Navigation
************************************/

.citm-utk-topnav {
    margin-bottom: 0;
}

/** Scrollspy Navigation
************************************/

.citm-utk-sidebar {
    z-index: 1031;
    padding-top: 15px;
    padding-bottom: 15px;
    border: 1px solid transparent;
}

.citm-utk-sidebar.affix {
    position: static;
    background: rgba(255,255,255,0.95);
    border-radius: 3px;
    border: 1px solid #ddd;
    box-shadow: 0 5px 18px rgba(0,0,0,.10);
    transition: all 0.25s linear;
}

@media (min-width:768px) {
    .citm-utk-sidebar {
        padding-left: 20px;
    }
}

.citm-utk-sidenav {
    margin-top: 20px;
}

.citm-utk-sidebar .nav>li>a {
    display: block;
    padding: 4px 20px;
    font-size: 13px;
    font-weight: 500;
    color: #767676;
}

.citm-utk-sidebar .nav>li>a:focus,
.citm-utk-sidebar .nav>li>a:hover {
    padding-left: 19px;
    color: #009CBD;
    text-decoration: none;
    background-color: transparent;
    border-left: 1px solid #009CBD;
}

.citm-utk-sidebar .nav>.active:focus>a,
.citm-utk-sidebar .nav>.active:hover>a,
.citm-utk-sidebar .nav>.active>a {
    padding-left: 18px;
    font-weight: 700;
    color: #009CBD;
    background-color: transparent;
    border-left: 2px solid #009CBD;
}

.citm-utk-sidebar .nav .nav {
    display: none;
    padding-bottom: 10px;
}

.citm-utk-sidebar .nav .nav>li>a {
    padding-top: 1px;
    padding-bottom: 1px;
    padding-left: 30px;
    font-size: 12px;
    font-weight: 400;
}

.citm-utk-sidebar .nav .nav>li>a:focus,
.citm-utk-sidebar .nav .nav>li>a:hover {
    padding-left: 29px;
}

.citm-utk-sidebar .nav .nav>.active:focus>a,
.citm-utk-sidebar .nav .nav>.active:hover>a,
.citm-utk-sidebar .nav .nav>.active>a {
    padding-left: 28px;
    font-weight: 500;
}

@media (min-width:992px) {
    .citm-utk-sidebar .nav>.active>ul {
        display: block;
    }
    .citm-utk-sidebar.affix,
    .citm-utk-sidebar.affix-bottom {
        width: 213px;
    }
    .citm-utk-sidebar.affix {
        position: fixed;
        top: 20px;
    }
    .citm-utk-sidebar.affix-bottom {
        position: absolute;
    }
    .citm-utk-sidebar.affix .citm-utk-sidenav,
    .citm-utk-sidebar.affix-bottom .citm-utk-sidenav {
        margin-top: 0;
        margin-bottom: 0;
    }
}

@media (min-width:1200px) {
    .citm-utk-sidebar.affix,
    .citm-utk-sidebar.affix-bottom {
        width: 263px;
    }
}

.citm-utk-section {
    margin-bottom: 60px;
}

/*.citm-utk-section:last-child {
    margin-bottom: 0;
}*/

.back-to-top, 
.toggle-sidenav {
    color: #999;   
}

.toggle-sidenav {
    display: none;
    font-size: 11px;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-weight: 400;
    line-height: 1;
    z-index: 100;
}

.citm-utk-sidebar.affix .toggle-sidenav{
    display: block;
    position: absolute;
    right: 10px;
    top: 9px;
}

.back-to-top {
    display: none;
    padding: 4px 10px;
    margin-top: 10px;
    margin-left: 10px;
    font-size: 12px;
    font-weight: 500;
}

.back-to-top:hover {
    color: #009CBD;
    text-decoration: none;
}

.toggle-sidenav:hover,
.toggle-sidenav:focus {
    color: #3b597c;
    text-decoration: none;
}

@media (min-width:768px) {
    .back-to-top {
        display: block;
    }
}

/** Example Wells
************************************/

.citm-example {
    box-shadow: none;
    background-color: #fff;
    border-radius: 3px;
    padding: 0;
    border: 1px solid #e3e3e3;
    min-height: 20px;
    margin-bottom: 20px;
}

.citm-example .citm-component {
    margin: 19px;
}

.citm-example .citm-example-name {
    background-color: #f5f5f5;
    padding: 9px 19px;
    border-bottom: 1px solid #e3e3e3;
    margin-top: 0;
    font-size: 14px;
    letter-spacing: 1px;
    text-transform: uppercase;
    font-weight: 500;
    color: #959595;
}

.citm-example.well-light-gray {
    background-color: #f7f7f7;
}

.citm-example.example-full {
    border-radius: 0;
    border-left: none;
    border-right: none;
}

.citm-example.example-full .citm-component {
    margin: 0;
    padding: 22px 0;
}

.citm-example.example-full .citm-example-name {
    margin: 0;
}

